1.0.22: August 2, 2019
	- in evalDiffCorr() return effect size estimates
	- in sle.test() and delaneau.test()
		if variable is factor with multiple levels, use Kruskal-Wallis test
		if variable is factor with 2 levels, use Wilcoxon test
		if variable is continuous, cor.test with spearman

1.0.21: August 2, 2019
	- fix bug in evalDiffCorr() preventing running "deltaSLE" with multiple categories

1.0.20: July 31, 2019
	- modify sle.score() to use lead eigen value of difference matrix
	- add runPermutedData() to get cluster statistics from permuted data
	- faster scoreClusters()
	- plotCorrDecay() 

1.0.19: July 26, 2019
	- getClusterRanges() and combineResults() is much faster

1.0.18: July 23, 2019
	- add support for the following tests:
	 "Cai.max", "Chang.maxBoot", "LC.U.test", "WL.randProj", "Schott.Frob", "Delaneau", "deltaSLE"
	- add extractCorrelationScores()
	- add getClusterRanges()

1.0.17: July 11, 2019
	- reduce memory usage of evaluateCorrDecay()
	- evalDiffCorr() now works on data.frame
	- add corrMatrix.test()
	- add support for following tests: "Box", "Box.permute", "Steiger.fisher", "Steiger", "Jennrich", "Factor", "Mann.Whitney", "Kruskal.Wallis"

1.0.16: June 5, 2019
	- improve error message in plotDecorate()

1.0.15: May 29, 2019
	- improve error messages for retainClusters()
	- add combineResults()
	- add additional plots to vignette

1.0.14: May 28, 2019
	- add plotScatterPairs()
	- plotDecorate() can compute correlation matrix directly from data
	- fixed bug in sign of sLED test statistic
	- plotDecorate() and plotCompareCorr() now have argument absCorr=FALSE as default
	- New simulated data
	- add method "medianCorr" to evalDiffCorr()

1.0.13: May 27, 2019
	- apply droplevels() to testVariable in .evalDiffCorr() and plotCompareCorr()

1.0.12: March 26, 2019
	- whichCluster() accepts array for feature_id
	- plotDecorate() and plotEnsGenes() now don't print empty page

1.0.11: March 25, 2019
	- whichCluster() results now have proper row names